--- a/post.hbs
+++ b/post.hbs
@@ -14,7 +14,7 @@
             {{content}}
         </section>
 
-        {{!> comments}}
+        {{> comments}}
 
         <footer id="post-meta" class="clearfix">
             <div><span>Posted on </span> <time class="dates" datetime="{{date format='YYYY-MM-DD'}}">{{date format='MMM D, YYYY'}}</time></div>
